accord
 * Improve transaction statement validation (CASSANDRA-18302)
 * Add support for prepared statements for accord transactions (CASSANDRA-18299)
 * Fix statement validation against partition range queries (CASSANDRA-18240)
 * CEP-15: (C*) Add git submodule for Accord (CASSANDRA-18204)
 * Fix null value handling for static columns (CASSANDRA-18241)
 * Feature Flag for Accord Transactions (CASSANDRA-18195)
 * CEP-15: Multi-Partition Transaction CQL Support (Alpha) (CASSANDRA-17719)
 * CEP-15 (C*): Messaging and storage engine integration (CASSANDRA-17103)

5.0
 * Remove deprecated CQL functions dateOf and unixTimestampOf (CASSANDRA-18328)
 * Remove DateTieredCompactionStrategy (CASSANDRA-18043)
 * Add system_views.max_sstable_size and system_views.max_sstable_duration tables (CASSANDRA-18333)
 * Extend implicit allow-filtering for virtual tables to clustering columns (CASSANDRA-18331)
 * Upgrade maven-shade-plugin to 3.4.1 to fix shaded dtest JAR build (CASSANDRA-18136)
 * Upgrade to Opcodes.ASM9 (CASSANDRA-17971)
 * Add MaxSSTableSize and MaxSSTableDuration metrics and propagate them together with local read/write ratio to tablestats (CASSANDRA-18283)
 * Add more logging around CompactionManager operations (CASSANDRA-18268)
 * Reduce memory allocations of calls to ByteBufer.duplicate() made in org.apache.cassandra.transport.CBUtil#writeValue (CASSANDRA-18212)
 * CEP-17: SSTable API (CASSANDRA-17056)
 * Gossip stateMapOrdering does not have correct ordering when both EndpointState are in the bootstrapping set (CASSANDRA-18292)
 * Snapshot only sstables containing mismatching ranges on preview repair mismatch (CASSANDRA-17561)
 * More accurate skipping of sstables in read path (CASSANDRA-18134)
 * Prepare for JDK17 experimental support (CASSANDRA-18179, CASSANDRA-18258)
 * Remove Scripted UDFs internals; hooks to be added later in CASSANDRA-17281 (CASSANDRA-18252)
 * Update JNA to 5.13.0 (CASSANDRA-18050)