@@ -20,6 +20,7 @@ package org.apache.cassandra.service.accord.serializers;
 
 import java.io.IOException;
 
+import accord.api.Result;
 import accord.messages.Apply;
 import accord.primitives.PartialRoute;
 import accord.primitives.TxnId;
@@ -27,7 +28,6 @@ import org.apache.cassandra.db.TypeSizes;
 import org.apache.cassandra.io.IVersionedSerializer;
 import org.apache.cassandra.io.util.DataInputPlus;
 import org.apache.cassandra.io.util.DataOutputPlus;
-import org.apache.cassandra.service.accord.txn.TxnData;
 
 public class ApplySerializers
 {
@@ -41,7 +41,6 @@ public class ApplySerializers
             CommandSerializers.timestamp.serialize(apply.executeAt, out, version);
             DepsSerializer.partialDeps.serialize(apply.deps, out, version);
             CommandSerializers.writes.serialize(apply.writes, out, version);
-            TxnData.serializer.serialize((TxnData) apply.result, out, version);
         }
 
         @Override
@@ -52,7 +51,7 @@ public class ApplySerializers
                                                      CommandSerializers.timestamp.deserialize(in, version),
                                                      DepsSerializer.partialDeps.deserialize(in, version),
                                                      CommandSerializers.writes.deserialize(in, version),
-                                                     TxnData.serializer.deserialize(in, version));
+                                                     Result.APPLIED);
         }
 
         @Override
@@ -62,8 +61,7 @@ public class ApplySerializers
                    + KeySerializers.seekables.serializedSize(apply.keys(), version)
                    + CommandSerializers.timestamp.serializedSize(apply.executeAt, version)
                    + DepsSerializer.partialDeps.serializedSize(apply.deps, version)
-                   + CommandSerializers.writes.serializedSize(apply.writes, version)
-                   + TxnData.serializer.serializedSize((TxnData) apply.result, version);
+                   + CommandSerializers.writes.serializedSize(apply.writes, version);
         }
     };
 
